--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,536 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <title>Crazybaby</title>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <link rel="icon" href="https://cdn.crazybaby.com.cn/assets/images/icons/favicon.ico?v=2019091101">
+    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <script src="./main.js" defer></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__top-wrap">
+          <a class="logo" href="#">
+            <img src="./images/logo.svg" alt="Logotype">
+          </a>
+
+          <div class="header__actions">
+            <a
+              class="header__link-specification link"
+              href="https://www.kickstarter.com/projects/lunabycrazybaby/luna-by-crazybaby-revolutionary-wireless-speaker"
+              target="_blank"
+            >
+              SPECS
+            </a>
+
+            <div class="header__lang">
+              <a class="header__lang-link link" href="#">
+                EN
+              </a>
+              /
+              <a class="header__lang-link link" href="#">
+                UA
+              </a>
+            </div>
+
+            <a class="header__link header__link--purchase link" href="#contact-us">
+              Buy
+            </a>
+          </div>
+
+          <div class="header__menu">
+            <a href="#menu">
+              <img
+              class="header__menu-icon"
+              src="./images/menu.svg"
+              alt="Menu icon"
+            >
+            </a>
+          </div>
+        </div>
+
+        <div class="header__content">
+          <div class="header__info">
+            <h1 class="header__title">Futuristic Wireless Speaker</h1>
+
+            <p class="header__paragraph">
+              Luna&rsquo;s performance is balanced and
+              smooth in all frequency ranges
+              which makes the music both
+              naturally pleasant and distinctly
+              more layered.
+            </p>
+          </div>
+
+          <div class="header__image-container">
+            <img
+              class="header__image"
+              src="./images/photos/wireless-speaker.jpg"
+              alt="Wireless speaker"
+            >
+          </div>
+        </div>
+
+        <div id="menu" class="header__nav">
+          <div class="header__nav-top-wrapper">
+            <a class="logo" href="#">
+              <img src="./images/logo.svg" alt="Logotype">
+            </a>
+
+            <a href="#">
+              <img
+                class="header__nav-cross"
+                src="./images/close-cross.svg"
+                alt="menu icon"
+              >
+            </a>
+          </div>
+
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a class="header__nav-item-link link" href="#presentation">
+                OUR STORY
+              </a>
+            </li>
+
+            <li class="header__nav-item">
+              <a class="header__nav-item-link link" href="#about-us">
+                ABOUT US
+              </a>
+            </li>
+
+            <li class="header__nav-item">
+              <a class="header__nav-item-link link" href="#technology">
+                TECHNOLOGY
+              </a>
+            </li>
+
+            <li class="header__nav-item">
+              <a class="header__nav-item-link link" href="#features">
+                FEATURES
+              </a>
+            </li>
+
+            <li class="header__nav-item">
+              <a class="header__nav-item-link link" href="#contact-us">
+                GET IN TOUCH
+              </a>
+            </li>
+          </ul>
+
+          <div class="header__nav-actions">
+            <div class="header__nav-lang">
+              <a class="header__nav-lang-link link" href="#">
+                EN
+              </a>
+              /
+              <a class="header__nav-lang-link link" href="#">
+                UA
+              </a>
+            </div>
+
+            <a
+              class="header__nav-link header__nav-link--buy link" href="#contact-us"
+            >
+              Buy
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <nav class="nav page__nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link link" href="#presentation">
+            OUR STORY
+          </a>
+        </li>
+
+        <li class="nav__item">
+          <a class="nav__link link" href="#about-us">
+            ABOUT US
+          </a>
+        </li>
+
+        <li class="nav__item">
+          <a class="nav__link link" href="#technology">
+            TECHNOLOGY
+          </a>
+        </li>
+
+        <li class="nav__item">
+          <a class="nav__link link" href="#features">
+            FEATURES
+          </a>
+        </li>
+
+        <li class="nav__item">
+          <a class="nav__link link" href="#contact-us">
+            GET IN TOUCH
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <section class="page__section">
+      <div class="container">
+        <div id="benefits" class="benefits">
+          <div class="benefits__item">
+            <img
+              class="benefits__icon"
+              src="./images/design.svg"
+              alt="Futuristic design"
+            >
+
+            <h2 class="benefits__title">
+              Futuristic Design
+            </h2>
+
+            <article class="benefits__article">
+              To give Luna a truly flawless look, we specifically picked aircraft grade aluminum as its material and adopted both three-dimensional stretch-bending technology and a high precision cold forging technique.
+            </article>
+          </div>
+
+          <div class="benefits__item">
+            <img
+              class="benefits__icon"
+              src="./images/speaker.svg"
+              alt="Speaker system"
+            >
+
+            <h2 class="benefits__title">
+              Tweeter Speaker System
+            </h2>
+
+            <article class="benefits__article">
+              To deliver a more layered sound performance better than a sole full-range speaker, our team equipped Luna with one more tweeter speaker responsible for high-frequency sound independently.
+            </article>
+          </div>
+
+          <div class="benefits__item">
+            <img
+              class="benefits__icon"
+              src="./images/multi.svg"
+              alt="Multiroom system"
+            >
+
+            <h2 class="benefits__title">
+              Multiroom System
+            </h2>
+
+            <article class="benefits__article">
+              Luna is natively compatible with your home Wi-Fi. Set up multiple speakers in different rooms to expand your music experience into the entire house.
+            </article>
+          </div>
+
+          <div class="benefits__item">
+            <img
+              class="benefits__icon"
+              src="./images/lighting.svg"
+              alt="Lighting system"
+            >
+
+            <h2 class="benefits__title">
+              Intuitive Lighting System
+            </h2>
+
+            <article class="benefits__article">
+              An intuitive user interface allows you to adjust the hue and saturation of color for lighting that fits any mood and situation.
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section">
+      <div id="presentation" class="presentation page__block">
+        <video
+          controls
+          width="100%"
+          height="590"
+          class="presentation__video"
+          poster="./images/photos/video.png"
+          src="./video/Futuristic-wireless-speaker.mp4"
+        >
+        </video>
+      </div>
+    </section>
+
+    <section class="page__section">
+      <div class="container">
+        <div id="about-us" class="about-us">
+          <div class="about-us__image-container">
+            <img
+              class="about-us__image"
+              src="./images/photos/about-us.png"
+              alt="About us image"
+            >
+          </div>
+
+          <div class="about-us__info">
+            <h2 class="about-us__title">
+              DESIGNED FOR THE FUTURE
+            </h2>
+
+            <img
+              class="about-us__image-mobile"
+              src="./images/photos/about-us.png"
+              alt="About us image"
+            >
+
+            <article class="about-us__article">
+              In 2014, a group of geeky industrial designers, engineering veterans and acoustic experts formed crazybaby. This is a bunch of passionate people who are crazy enough to think they can challenge the industry with disruptive audio products.
+            </article>
+
+            <a class="about-us__link link" href="#">
+              See more about us
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section">
+      <div class="container">
+        <div id="technology" class="technology">
+          <div class="technology__title-wrap">
+            <h2 class="technology__title">
+              Technology
+            </h2>
+          </div>
+
+          <img
+            class="technology__image"
+            src="./images/photos/test.svg"
+            alt="Technology"
+          >
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section">
+      <div class="container">
+        <div id="testimonials" class="testimonials page__block">
+          <article class="testimonials__article">
+            It really took me by surprise honestly to have such full beautiful sound that coming out of this small compact device. And with the brush aluminum surface, it feels so familiar. Like my iPhone.
+          </article>
+
+          <div class="testimonials__user">
+            <img
+              class="testimonials__user-icon"
+              src="./images/photos/Garrett.svg"
+              alt="Garrett Martin"
+            >
+
+            <p class="testimonials__user-name">
+              Garrett Martin
+            </p>
+
+            <p class="testimonials__user-role">
+              Creative Director
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section">
+      <div class="container">
+        <div id="features" class="features">
+          <div class="features__main-title-wrap">
+            <h2 class="features__main-title">
+              FEATURES
+            </h2>
+          </div>
+
+          <div class="features__items">
+            <div class="features__item
+          features__item--top">
+              <h3 class="features__title">
+                Sound & Music
+              </h3>
+
+              <ul class="features__list">
+                <li>
+                  Feel-in-chest Base Power
+                </li>
+
+                <li>
+                  Lossless Digital Audio Transmission
+                </li>
+
+                <li>
+                  Easy & Stable Stereo Pairing
+                </li>
+
+                <li>
+                  Crisp and Clear High Frequency Sound
+                </li>
+
+                <li>
+                  Streams from Cloud Music and Local Library
+                </li>
+
+                <li>
+                  Auto Music Playback from Last Song Stopped
+                </li>
+              </ul>
+            </div>
+
+            <div class="features__item
+            features__item--left">
+              <h3 class="features__title">
+                Connectivity
+              </h3>
+
+              <ul class="features__list">
+                <li>
+                  Hands Free Wireless Audio
+                </li>
+
+                <li>
+                  Bluetooth 4.0 LE
+                </li>
+
+                <li>
+                  Wi-Fi 2.4 GHz (802.11 b/g/n)
+                </li>
+
+                <li>
+                  Smart Multiroom System Set Up
+                </li>
+
+                <li>
+                  Party Mode with 6.0 Units and above
+                </li>
+
+                <li>
+                  Powerful MESHNET Multi Speaker Network
+                </li>
+              </ul>
+            </div>
+
+            <div class="features__item
+            features__item--bottom">
+              <h3 class="features__title">
+                App Features
+              </h3>
+
+              <ul class="features__list">
+                <li>
+                  Customize Music Schedule
+                </li>
+
+                <li>
+                  Wake Up with Favorite Songs
+                </li>
+
+                <li>
+                  Home Detection Auto Wake Up
+                </li>
+
+                <li>
+                  Color Wheel & Saturation Change
+                </li>
+              </ul>
+            </div>
+
+            <div class="features__image-container">
+              <img
+                class="features__image"
+                src="./images/photos/features.jpg" alt="Features"
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section">
+      <div class="container">
+        <div id="contact-us" class="contact-us">
+          <h2 class="contact-us__title">
+            DO YOU HAVE ANY QUESTIONS?
+          </h2>
+
+          <div class="contact-us__form">
+            <form class="contact-us__form-fields" action="#">
+              <input
+                class="contact-us__form-field"
+                type="email"
+                name="email"
+                placeholder="Your email"
+                required
+              >
+              <textarea
+                class="contact-us__form-field contact-us__form-field--textarea"
+                type="text"
+                name="message"
+                placeholder="Your message..."
+              ></textarea>
+              <button
+                class="contact-us__button"
+                type="submit"
+              >
+                Send
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <a class="footer__arrow-link link" href="#">
+            <img
+              class="footer__arrow"
+              src="./images/arrow-up.svg"
+              alt="arrow"
+            >
+          </a>
+
+          <a class="logo footer__logo" href="#">
+            <img src="./images/logo.svg" alt="Logotype">
+          </a>
+
+          <div class="social">
+            <a
+              class="social__facebook"
+              href="https://www.facebook.com/hicrazybaby/"
+              target="_blank"
+            >
+              <img src="./images/facebook.svg" alt="Facebook">
+            </a>
+            <a
+              class="social__twitter"
+              href="https://twitter.com/crazybabyaudio"
+              target="_blank"
+            >
+              <img src="./images/twitter.svg" alt="Twitter">
+            </a>
+            <a
+              class="social__instagram"
+              href="https://www.instagram.com/crazybaby/"
+              target="_blank"
+            >
+              <img src="./images/instagram.svg" alt="Instagram">
+            </a>
+          </div>
+
+          <div class="footer__copyright">
+            &copy; 2022 All rights reserved. Terms of Use & Privacy Policy
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
